fix gap navbar upper right

--- a/components/button-navbar/style.css
+++ b/components/button-navbar/style.css
@@ -44,7 +44,7 @@
     display: flex;
     margin-left: auto;
     align-items: center;
-    gap: 25px;
+    gap: 10px;
     padding-right: 10px;
   }
  .upper-right a {
